--- a/style.css
+++ b/style.css
@@ -324,23 +324,15 @@ header .container {
 }
 
 .modal-dialog-resume {
-    width: 50vw;
-    height: 120vh;
-    max-width: 80%;
-    max-height: 90%;
-    margin: 5vh auto;
-    padding: 0;
+    max-width: 95%;
+    margin: 20px auto;
 }
 
-.modal-content-resume {
-    height: 100%;
-    border-radius: 10px;
-    box-shadow: var(--box-shadow);
-}
-
-.modal-body-resume {
-    overflow-y: auto;
-    padding: 20px;
+.modal-body-resume object {
+    width: 100%;
+    height: calc(100vh - 100px); 
+    display: block;
+    margin: auto;
 }
 
 .profile-pic {
@@ -417,9 +409,19 @@ body.dark-mode a {
 
 /* Responsive Design */
 @media (max-width: 768px) {
+    .navbar {
+        padding: 0.5rem 0; 
+    }
+    
     .navbar-nav {
         text-align: center;
         padding: 0.5rem 0;
+        flex-direction: row; 
+        justify-content: space-around; 
+    }
+
+    .navbar-brand {
+        font-size: 1.25rem;
     }
 
     .resume-image {
@@ -454,6 +456,15 @@ body.dark-mode a {
         width: 100%;
         justify-content: space-evenly;
         margin-top: 10px;
+    }
+
+    .project-link img {
+        width: 24px; 
+        height: 24px;
+    }
+
+    .modal-body-resume object {
+        height: calc(100vh - 60px);
     }
 }
 
